--- a/Presentation/appsettings.json
+++ b/Presentation/appsettings.json
@@ -6,8 +6,8 @@
     }
   },
   "ConnectionStrings": {
-    "sqlConnection": "Data Source=Taskmanager.db",
-    "DefaultConnection": "Server=srv993.hstgr.io;Port=3306;Database=u405233592_taskdb; User Id=u405233592_taskuser; password=:bF3QZqusY; Allow User Variables=true;",
+    "DefaultConnection": "Data Source=Taskmanager.db",
+    "sqlConnection": "Server=srv993.hstgr.io;Port=3306;Database=u405233592_taskdb; User Id=u405233592_taskuser; password=:bF3QZqusY; Allow User Variables=true;",
     "HangfireConnection": "Server=srv993.hstgr.io;Port=3306;Database=u405233592_taskdb; User Id=u405233592_taskuser; password=:bF3QZqusY; Allow User Variables=true;"
   },
   "DueDateMaxHour": 48,
